# regmonkey-datascience-blog

./: .gitignore  .nojekyll  .pre-commit-config.yaml  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  index.xml  index_by_series.html  index_by_series.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
.github/ISSUE_TEMPLATE/: fix_documentation.yml  fix_typos.yml
.github/repository_metadata/: gh_repo.yml
.github/workflows/: publish.yml
FAQ/: faq.html  faq.qmd
backup/: index_by_series.html  index_by_series.qmd
badges/: posts.json
custom_package/shogi_player/: kifPlayer.js
dashboard/: custom.scss  dashboard.html  dashboard.qmd
dictionary/: command_dictionary.yml  dict.html  dict.qmd  dictionary.yml  english_phrase.yml  git_commit_tag.yml  greekletter.yml  keyword_dict.py  magic_numbers.yml  regex.yml  toollist.yml  ubuntu_directory.yml  unicode_dictionary.yml  unit_of_measurement.yml  vim_commands.yml
include/: custom.scss  custom_function.html  custom_section.html  dark.scss  dict_table_filter.html  light.scss  mathjax.html  mathjax_read.html  setup_googletagmanager.html  setup_googletagmanager_body.html
js/: regmonkey_glossary_generator.js
js/regmonkey_glossary_generator/: regmonkey_glossary_generator.css  regmonkey_glossary_generator.js
link_list/: link.yml  link_table.html  link_table.py  link_table.qmd
posts/: _metadata.yml
posts/2020-03-10-how-to-write-document/: index.html  index.qmd
posts/2021-01-16-apt-personal-package-archive/: index.html  index.qmd
posts/2021-05-05-ubuntu-permission/: index.html  index.qmd
posts/2021-05-07-linux-system-clock/: index.html  index.qmd
posts/2022-02-26-ls-command/: index.html  index.qmd
posts/2022-08-11-difference-in-shebang/: index.html  index.qmd
posts/2023-01-01-linux-find-command/: index.html  index.qmd
posts/2024-06-07-ubuntu-noble-numbat/: index.html  index.qmd
posts/2024-12-06-meta-address/: index.html
posts/2024-12-07-meta-address/: index.html  index.qmd
posts/2024-12-11-BQ-create-external-table/: index.html  index.qmd
posts/2024-12-16-ssh-to-macos/: index.html  index.qmd
posts/2024-12-17-firefox-proxy-access/: index.html  index.qmd
posts/2024-12-18-secure-shell/: index.html  index.qmd
posts/2024-12-19-shortcuts/: index.html  index.qmd
posts/2024-12-20-readme-template/: index.html  index.qmd
script/: fetch-blog-field.sh
(+418 files in other folders)
