[project]
name = "regmonkey-datascience-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "RyoNak",email = "nakagamiryo0901@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
