[project]
name = "regmonkey-datascience-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "RyoNak",email = "nakagamiryo0901@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (>=1.15.1,<1.15.3)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "altair (>=5.5.0,<6.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "kaleido (==0.2.1)",
    "lxml (>=5.3.0,<6.0.0)",
    "sympy (>=1.13.3,<2.0.0)",
    "polars (>=1.22.0,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "itables (>=2.2.5,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "cmdstanpy (>=1.2.5,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "coolprop (>=6.8.0,<7.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pyreadstat (>=1.3.2,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
